--- a/src/app/shared/components/references/reference.component.html
+++ b/src/app/shared/components/references/reference.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="references">
   <div class="col-lg-12">
     <h2 *ngIf="references.length">References</h2>
     <ul>
