--- a/src/app/pages/home/components/slider/carousel.component.html
+++ b/src/app/pages/home/components/slider/carousel.component.html
@@ -1,7 +1,7 @@
 <div class="home-banner">
   <div class="glide__track" data-glide-el="track">
     <ul class="glide__slides" #slider>
-      <dsod-slider-item [content]="con" [loggedIn]="loggedIn" *ngFor="let con of content">>
+      <dsod-slider-item [content]="con" [loggedIn]="loggedIn" *ngFor="let con of content">
       </dsod-slider-item>
     </ul>
   </div>
