--- a/src/app/pages/education/components/education-catalogue/education-catalogue.component.html
+++ b/src/app/pages/education/components/education-catalogue/education-catalogue.component.html
@@ -1,6 +1,6 @@
 <tabset class="dsod-tab-set">
   <tab heading="ALL COURSES" customClass="dsod-tab">
-    <p class="tab-title">Catalogue</p>
+    <p class="tab-title">Categories</p>
     <div class="content-item-wrapper">
       <div class="content-item" *ngFor="let category of categoryList" (click)="onClickCategory(category.name)">
         <img class="img-category" [src]="category.image" />
