--- a/src/app/pages/career/components/career/career.component.html
+++ b/src/app/pages/career/components/career/career.component.html
@@ -9,32 +9,12 @@
 </div>
 <div class="content-wrapper">
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-6 item-tile" *ngFor="let image of careerImages">
       <div class="content-item-wrapper">
-        <span class="fa fa-search"></span>
-        <span class="title">Search</span>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="content-item-wrapper">
-        <span class="fa fa-user"></span>
-        <span class="title">Me</span>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="content-wrapper">
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="content-item-wrapper">
-        <span class="fa fa-file"></span>
-        <span class="title">Review</span>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="content-item-wrapper">
-        <span class="fa fa-user-circle"></span>
-        <span class="title">DSO Profiles</span>
+        <img src={{image.url}}>
+        <div class="item-overlay">
+          <span class="title">{{image.title}}</span>
+        </div>
       </div>
     </div>
   </div>
