--- a/src/app/pages/career/components/career/career.component.scss
+++ b/src/app/pages/career/components/career/career.component.scss
@@ -8,17 +8,60 @@
   width: 60%;
   margin: auto;
 }
+
 .content-wrapper {
   width: 60%;
   margin: auto;
-  padding: 30px;
-  .content-item-wrapper {
-    height: 200px;
-    border: 1px solid;
+  padding: 60px 30px 30px;
+
+  .item-tile:nth-child(odd) {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .content-item-wrapper {
+    position: relative;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 30px;
+    max-width: 347px;
+    margin: 0 0 30px;
+
+    >img {
+      width: 100%;
+    }
+
+    .item-overlay {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 30px;
+      flex-direction: column;
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      color: #fff;
+      z-index: 9;
+      background: rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+    }
+
+    &::after {
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.6);
+      content: "";
+      opacity: 0;
+      transition: 1s all ease;
+    }
+
+    &:hover::after {
+      opacity: 1;
+    }
   }
 }
