fixed podcastPreview component for DSTP-328

--- a/src/app/pages/podcast/components/podcast-content/podcast-content.component.html
+++ b/src/app/pages/podcast/components/podcast-content/podcast-content.component.html
@@ -1,2 +1,1 @@
-<div class="speakers-content" *ngIf="content" [innerHTML]="content.content">
-</div>
+<div class="speakers-content" *ngIf="content" [innerHTML]="content.content"></div>
