fixed previewComponents for audioPlayer

--- a/src/app/pages/preview/components/podcast-preview.component.html
+++ b/src/app/pages/preview/components/podcast-preview.component.html
@@ -17,8 +17,8 @@
       </div>
     </div>
     <div class="col-lg-8">
-      <!-- <dsod-audio-player [content]="content"></dsod-audio-player> -->
-      <div [innerHTML]="contentString"></div>
+      <dsod-audio-player [content]="content"></dsod-audio-player>
+      <div class="speakers-content mt-5" [innerHTML]="contentString"></div>
     </div>
   </div>
   <!-- <div class="row">
