--- a/src/app/pages/preview/components/video-preview.component.html
+++ b/src/app/pages/preview/components/video-preview.component.html
@@ -18,7 +18,8 @@
   </div>
   <div class="row">
     <div class="col-lg-12">
-    <div class="article-content" [innerHTML]="contentString"></div>
+      <dsod-audio-player [content]="content"></dsod-audio-player>
+      <div class="speakers-content mt-5" [innerHTML]="contentString"></div>
     </div>
   </div>
   <dsod-references [references]="content.references"></dsod-references>
