--- a/src/app/shared/components/audio-player/audio-player.component.html
+++ b/src/app/shared/components/audio-player/audio-player.component.html
@@ -3,42 +3,46 @@
 </ng-template>
 <div class="podcast-player" *ngIf="content.podcastUrls">
   <div class="visualizer">
-    <div class="row">
-      <div class="col-md-8">
-        <div id="playerContainer"></div>
-      </div>
-      <div class="col-md-4 d-flex justify-content-center">
-        <div class="pod-timings">
-          <span #curretTime class="playin-time">0:00</span>
-          <span #trackLength class="total-time">0:00</span>
+    <div class="row align-items-center">
+      <div class="col-md-2">
+        <div class="play-icon-lg">
+          <a href="javascript:void(0)" (click)="playPause()">
+            <i *ngIf="!isPlaying" class="fa fa-play" aria-hidden="true"></i>
+            <i *ngIf="isPlaying" class="fa fa-pause" aria-hidden="true"></i>
+            <!-- <img *ngIf="isPlaying" src="assets/images/media-pause.png" alt=""> -->
+          </a>
         </div>
       </div>
+      <div class="col-md-10 bb-grey">
+        <h3>Episode #001</h3>
+        <h3>{{content.title}}&nbsp;with&nbsp;{{content.author.fullName}}</h3>
+        <div class="row">
+          <div class="col-md-10">
+            <div id="playerContainer"></div>
+          </div>
+          <div class="col-md-2 d-flex align-items-center justify-content-end">
+            <div class="pod-timings mr-5">
+              <span #curretTime class="playin-time">0:00</span>
+              <span #trackLength class="total-time">0:00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
   <div class="media-controls">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-12">
         <div class="controls-wrap ">
           <a href="javascript:void(0)">
             <img src="assets/images/media-repeat.png" alt="">
           </a>
-          <a href="javascript:void(0)" (click)="player.skipBackward()">
-            <img src="assets/images/media-prev.png" alt="">
-          </a>
-          <a href="javascript:void(0)" (click)="playPause()">
-            <img *ngIf="!isPlaying" src="assets/images/media-play.png" alt="">
-            <img *ngIf="isPlaying" src="assets/images/media-pause.png" alt="">
-          </a>
-          <a href="javascript:void(0)" (click)="player.skipForward()">
-            <img src="assets/images/media-next.png" alt="">
-          </a>
+
           <a href="javascript:void(0)">
             <img src="assets/images/media-shuffle.png" alt="">
           </a>
-        </div>
-      </div>
-      <div class="col-md-6 align-self-center">
-        <div class="volume-wrap">
+          <!-- <div class="volume-wrap"> -->
           <a href="javascript:void(0)">
             <img src="assets/images/volume-down.png" alt="">
           </a>
@@ -47,9 +51,23 @@
           <a href="javascript:void(0)">
             <img src="assets/images/volume-up.png" alt="">
           </a>
+          <a href="javascript:void(0)" (click)="player.skipBackward()">
+            <img src="assets/images/media-prev.png" alt="">
+          </a>
+
+          <a href="javascript:void(0)" (click)="player.skipForward()">
+            <img src="assets/images/media-next.png" alt="">
+          </a>
+          <a href="javascript:void(0)" style="margin-left:auto;">
+            <dsod-share></dsod-share>
+          </a>
+
+          <!-- </div> -->
         </div>
       </div>
+
     </div>
   </div>
+
 </div>
 <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
