--- a/src/app/pages/podcast/components/podcast-tabs/podcast.tabs.component.html
+++ b/src/app/pages/podcast/components/podcast-tabs/podcast.tabs.component.html
@@ -1,10 +1,6 @@
-<div class="podcasts-tabs d-flex align-items-center">
-  <h3 class="podcasts-title">Podcasts</h3>
-  <tabset>
-    <tab heading="New" class="mt-2">
-      <div class="podcasts-list">
-        <dsod-podcast-playlist *ngIf="content" [contenTypeId]="content.contentTypeId"></dsod-podcast-playlist>
-      </div>
-    </tab>
-  </tabset>
+<div class="podcasts-tabs">
+  <h3 class="mb-4 text-center">References</h3>
+  <div class="podcasts-list">
+    <dsod-podcast-playlist *ngIf="content" [contenTypeId]="content.contentTypeId"></dsod-podcast-playlist>
+  </div>
 </div>
