--- a/src/app/pages/podcast/containers/podcast-page.component.html
+++ b/src/app/pages/podcast/containers/podcast-page.component.html
@@ -3,17 +3,13 @@
     <div class="col-xl-12" *ngIf="content">
       <div class="podcast-intro p-t-115">
         <dsod-podcast-header [content]="pageContent$ | async"></dsod-podcast-header>
-        <h2 class="page-heading">Overview</h2>
         <div class="podcast-player" *ngIf="content">
           <div class="row">
             <div class="col-lg-2">
               <dsod-content-author [podcast]="content"></dsod-content-author>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-10">
               <dsod-audio-player [content]="pageContent$ | async"></dsod-audio-player>
-            </div>
-            <div class="col-lg-2">
-              <dsod-content-actions [content]="pageContent$ | async"></dsod-content-actions>
             </div>
           </div>
         </div>
@@ -21,15 +17,14 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xl-8 col-lg-12">
+    <div class="col-xl-12 col-lg-12">
       <dsod-podcast-content [content]="content"></dsod-podcast-content>
       <dsod-references [references]="(pageContent$ | async)?.references"></dsod-references>
-      <dsod-podcast-tabs [content]="pageContent$ | async"></dsod-podcast-tabs>
       <div *ngIf="isLoggedIn">
         <dsod-article-reviews [content]="pageContent$ | async"></dsod-article-reviews>
       </div>
     </div>
-    <div class="col-xl-4 col-lg-12">
+    <!-- <div class="col-xl-4 col-lg-12">
       <div class="row">
         <div class="col-xl-12 col-lg-6 col-md-12">
           <div class="subscribe-today">
@@ -61,6 +56,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
+
 </div>
