--- a/src/app/pages/podcast/containers/podcast-page.component.scss
+++ b/src/app/pages/podcast/containers/podcast-page.component.scss
@@ -50,6 +50,13 @@
 
 .podcast-player {
   margin-bottom: 115px;
+  .link-icon{
+    font-size:35px;
+    color: $text-main; 
+    .fa{
+      color: #8799A7;
+    }
+  }
 }
 
 .subscribe-today {
