--- a/src/app/pages/events/components/card/event-card.component.html
+++ b/src/app/pages/events/components/card/event-card.component.html
@@ -6,8 +6,22 @@
     <span class="sponsored-by">Online Talks</span>
   </div>
   <div class="event-card-level">
-    <span class="level-text">Virtual Event</span>
-    <span class="event-level"><img src="./assets/images/level-1.png" alt="">Beginner</span>
+    <div>
+      <span class="level-text">Virtual Event</span>
+      <select name="" class="form-control mt-2" id="">
+        <option value="">Text</option>
+        <option value="">Text</option>
+        <option value="">Text</option>
+      </select>
+    </div>
+    <div>
+      <span class="event-level"><img src="./assets/images/level-1.png" alt="">Beginner</span>
+      <select name="" class="form-control mt-2" id="">
+        <option value="">Text</option>
+        <option value="">Text</option>
+        <option value="">Text</option>
+      </select>
+    </div>
   </div>
   <div class="card-thumbnail">
     <img src="./assets/images/card-thumbnail-2.png" alt="">
@@ -20,10 +34,17 @@
   </div>
   <div class="event-card-footer">
     <div class="event-timing">
-      <span>Jan 26, 2019 | 1hr 30m </span>
-      <span>FREE</span>
+      <span>Jan 26, 2019 | 1hr 30m 
+        <div class="event-city">Online | 9pm EST</div>
+      </span>
+      <span>FREE
+        <select name="" class="form-control" id="">
+          <option value="">$1</option>
+          <option value="">$1</option>
+          <option value="">$1</option>
+        </select>
+      </span>
     </div>
-    <div class="event-city">Online | 9pm EST</div>
     <div class="register-btn-wrap">
       <a href="" class="card-action"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
       <a href="#" class="register-btn">Register</a>
