--- a/src/app/pages/events/components/create-event/create-event.component.html
+++ b/src/app/pages/events/components/create-event/create-event.component.html
@@ -1,11 +1,11 @@
 <div class="modal-header d-flex">
   <h4 class="modal-title">Create An Event</h4>
   <div class="btn-actions alig-self-end d-flex">
-      <a href="#" class="btn btn-primary mr-2">Save</a>
-      <a href="#" class="btn btn-primary">Preview</a>
-      <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
+    <a href="#" class="btn btn-primary mr-2">Save</a>
+    <a href="#" class="btn btn-primary">Preview</a>
+    <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
 </div>
 <div class="modal-body">
@@ -69,10 +69,10 @@
             <label for="" class="form-control-label text-uppercase">Starts</label>
             <div class="row">
               <div class="col-md-6">
-                <input type="text" class="form-control" id="" placeholder="Oct-20">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="date">
               </div>
               <div class="col-md-6">
-                <input type="text" class="form-control" id="" placeholder="2018">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="year">
               </div>
             </div>
           </div>
@@ -82,10 +82,10 @@
             <label for="" class="form-control-label text-uppercase">Ends</label>
             <div class="row">
               <div class="col-md-6">
-                <input type="text" class="form-control" id="" placeholder="Oct-20">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="date">
               </div>
               <div class="col-md-6">
-                <input type="text" class="form-control" id="" placeholder="2018">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="year">
               </div>
             </div>
           </div>
@@ -93,13 +93,13 @@
         <div class="col-md-2">
           <div class="form-group">
             <label for="" class="form-control-label text-uppercase">Start Time</label>
-            <input type="text" class="form-control" id="" placeholder="Oct-20">
+            <input type="time" class="form-control">
           </div>
         </div>
         <div class="col-md-2">
           <div class="form-group">
             <label for="" class="form-control-label text-uppercase">End Time</label>
-            <input type="text" class="form-control" id="" placeholder="Oct-20">
+            <input type="time" class="form-control">
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@
             <a href="">
               <i class="fa fa-desktop" aria-hidden="true"></i>Time & Date settings (PDT)
             </a>
-            
+
           </div>
         </div>
       </div>
