--- a/src/app/pages/events/containers/events-page.component.html
+++ b/src/app/pages/events/containers/events-page.component.html
@@ -1,7 +1,7 @@
 <div class="events-banner">
   <div class="glide__track" data-glide-el="track">
     <ul class="glide__slides" #slider>
-      <dsod-event-slide [content]="con" *ngFor="let con of content">>
+      <dsod-event-slide [content]="con" *ngFor="let con of content">
       </dsod-event-slide>
     </ul>
   </div>
@@ -15,15 +15,26 @@
     <div class="col-md-3">
       <section class="filter-events">
         <dosd-filter-select label="Filter events by"></dosd-filter-select>
-        <ngb-datepicker #dp [(ngModel)]="eventDate" (ngModelChange)="onSelectDate(e)" (navigate)="date = $event.next"></ngb-datepicker>
+        <div><label><i class="fa fa-plus mr-2"></i>Create Event</label></div>
+
+        <div class="d-flex justify-content-center datepicker-wrap">
+          <ngb-datepicker #dp [(ngModel)]="eventDate" (ngModelChange)="onSelectDate(e)"></ngb-datepicker>
+        </div>
         <dsod-event-training></dsod-event-training>
       </section>
     </div>
     <div class="col-md-9">
-      <h2 class="section-title mt-5">Events</h2>
+      <h2 class="section-title mt-5 d-flex justify-content-between">{{(isEditingEnable?'Edit Event':'Events')}}
+        <div class="d-flex">
+          <button *ngIf="!isEditingEnable" class="btn btn-primary btn-blue event-action-btn mr-2" (click)="onEditEvent($event)">Edit</button>
+          <!-- <button *ngIf="!isEditingEnable" class="btn event-action-btn btn-danger mr-2" (click)="onEditEvent($event)">Delete</button> -->
+          <button *ngIf="isEditingEnable" class="btn btn-primary btn-blue event-action-btn" (click)="onSaveEvents($event)">Save</button>
+        </div>
+      </h2>
+
       <div class="row">
-        <div class="col-md-4" *ngFor="let number of [0,1,2,3,4,5,6,7,8]">
-          <dsod-event-card></dsod-event-card>
+        <div class="col-md-4" *ngFor="let event of events">
+          <dsod-event-card [isEditable]="isEditingEnable" [event]="event"></dsod-event-card>
         </div>
       </div>
     </div>
