--- a/src/styles.scss
+++ b/src/styles.scss
@@ -144,6 +144,15 @@ ul li {
   }
 }
 
+.create-event {
+  .modal-dialog {
+    max-width: 1000px;
+  }
+  .modal-body{
+    padding: 50px;
+  }
+}
+
 @media only screen and (min-width:1366px) {
   .container {
     max-width: 1300px;
