--- a/src/app/pages/events/components/card/event-card.component.html
+++ b/src/app/pages/events/components/card/event-card.component.html
@@ -4,6 +4,9 @@
       <img src="./assets/images/card-dso-logo.png" alt="">
     </span>
     <span class="sponsored-by">Online Talks</span>
+    <span class="delete-icon">
+      <i class="fa fa-times" aria-hidden="true"></i>
+    </span>
   </div>
   <div class="event-card-level">
     <div>
