--- a/src/app/pages/events/components/card/event-card.component.scss
+++ b/src/app/pages/events/components/card/event-card.component.scss
@@ -2,7 +2,8 @@
 
 .event-card {
   &.focused {
-    box-shadow: 0px 0px 18px 0px rgba(24, 152, 205, 0.5);
+    -webkit-box-shadow: 0px 0px 18px 0px rgba(24, 152, 205, 0.5);
+            box-shadow: 0px 0px 18px 0px rgba(24, 152, 205, 0.5);
   }
   background: $alabaster_white;
   margin: 12px 0;
@@ -10,9 +11,14 @@
 
   .event-card-header {
     background: $boulder_grey;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 3px 6px;
+    position: relative;
 
     span.header-logo {}
 
@@ -23,12 +29,48 @@
       border-left: 1px solid #fff;
       margin-left: 13px;
     }
+    span.delete-icon {
+      position: absolute;
+      right: 7px;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%);
+      height: 25px;
+      width: 25px;
+      border-radius: 50%;
+      text-align: center;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      color: #fff;
+      font-size: 17px;
+      padding: 0px 0px 2px 0px;
+      background-color: #dc3545;
+      -webkit-transition: 0.2s all ease;
+      transition: 0.2s all ease;
+      &:hover{
+        -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+                box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+      }
+    }
   }
 
   .event-card-level {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background: $alabaster_white;
     padding: 9px 7px;
 
@@ -103,8 +145,12 @@
     padding: 0 15px;
 
     .event-timing {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;      
-      justify-content: space-between;
+      -webkit-box-pack: justify;      
+          -ms-flex-pack: justify;      
+              justify-content: space-between;
       padding: 9px 0 6px;
 
       span {
@@ -144,8 +190,12 @@
     }
 
     .register-btn-wrap {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: flex-end;
+      -webkit-box-pack: end;
+          -ms-flex-pack: end;
+              justify-content: flex-end;
       padding: 21px 5px 8px;
 
       
@@ -157,8 +207,12 @@
         padding: 2px 15px 0;
         margin-right: 10px;
         font-size: 31px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         position: relative;
 
         &::before {
@@ -178,7 +232,8 @@
         color: $color-white;
         padding: 6px 12px;
         background: $color-secondary;
-        align-self: center;
+        -ms-flex-item-align: center;
+            align-self: center;
         &.register-enabled{
           background: $layout-blue;
         }
