--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -5,11 +5,9 @@
 <div class="nav-wrapper" onScroll-update>
   <div class="container-fluid">
     <div class="d-flex justify-content-between">
-
       <div class="brand">
         <a [routerLink]="['/']"><img class="img img-fluid" src="assets/images/dso-logo.png"></a>
       </div>
-
       <div class="col-sm-10">
         <div class="nav-menu">
           <nav class="navbar navbar-expand-lg navbar-light">
@@ -56,6 +54,12 @@
                         </li>
                       </ul>
                     </li>
+                  </div>
+                </li>
+                <li class="nav-item login-wrap" *ngIf="(isLoggedIn$ | async)">
+                  <div class="nav-link avatar-wrap notify-wrapper">
+                    <i class="fa fa-bell icon-bell"></i>
+                    <span class="alert-count">5</span>
                   </div>
                 </li>
                 <li class="nav-item login-wrap" *ngIf="!(isLoggedIn$ | async)">
