--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -75,6 +75,25 @@
               height: 40px;
               border-radius: 50%
             }
+            &.notify-wrapper {
+              position: relative;
+              .icon-bell {
+                font-size: 25px;
+              }
+              .alert-count {
+                position: absolute;
+                border-radius: 50%;
+                background-color: #d23636;
+                color: white;
+                width: 20px;
+                height: 20px;
+                align-items: center;
+                display: flex;
+                justify-content: center;
+                top: -10px;
+                right: 0px;
+              }
+            }
             .user-name {
               display: flex;
               flex-direction: column;
@@ -184,6 +203,12 @@
 
 .bg-dark-scroll {
   background: rgba(0, 0, 0, 0.95);
+  .notify-wrapper {
+    .icon-bell {
+      color: white;
+      font-size: 25px;
+    }
+  }
 }
 li.sub-menu-child>a::after {
   content: "\f0da";
