--- a/src/app/layout/profile/profile-view/profile-view.component.html
+++ b/src/app/layout/profile/profile-view/profile-view.component.html
@@ -104,6 +104,14 @@
     </div>
     <div class="section-container">
       <div class="info-container">
+        <p class="title">Settings</p>
+        <div class="body-wrapper">
+          <dsod-profile-settings></dsod-profile-settings>
+        </div>
+      </div>
+    </div>
+    <div class="section-container">
+      <div class="info-container">
         <p class="title">Admin Console</p>
         <div class="body-wrapper">
           <div class="body-item-wrapper">
