--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
@@ -238,6 +238,19 @@
     </div>
     <div class="section-container">
       <div class="info-container">
+        <div class="title-container">
+          <p class="title">Settings</p>
+        </div>
+        <div class="body-wrapper">
+          <dsod-profile-settings
+            [editable]="true"
+            (updateSettings)="updateSettings($event)">
+          </dsod-profile-settings>
+        </div>
+      </div>
+    </div>
+    <div class="section-container">
+      <div class="info-container">
         <p class="title">Admin Console</p>
         <div class="body-wrapper">
           <div class="body-item-wrapper">
