fixed style issue for landing page

--- a/src/app/pages/home/components/featured-topics/featured-topics.component.scss
+++ b/src/app/pages/home/components/featured-topics/featured-topics.component.scss
@@ -4,8 +4,8 @@
 .feautred-topics {
   font-family: $Arial;
   .content-lg{
-    /deep/ .topic-block{
-      height: auto;
+    /deep/ .topic-block {
+      height: 100%;
     }
   }
 }
