--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -5,13 +5,11 @@
     font-family: $Arial;
     background: #f8f8f8;
     height: 100%;
-
     .topic-block-header {
       display: flex;
       justify-content: space-between;
       padding: 16px 15px 14px;
       border-bottom: 1px solid #8799a7;
-
       h4 {
         color: $color-primary;
         font-size: 18px;
@@ -19,48 +17,39 @@
         line-height: 20px;
       }
     }
-
     .topic-block-thumbnail {
       position: relative;
       border-top: 3px solid $mine_grey;
-
       a {
         >img {
           width: 100%;
         }
       }
-
       >video {
         width: 100%;
       }
-
       a.read-about {
         position: absolute;
         display: inline-block;
         left: 25px;
         bottom: 25px;
-
         >img {
           max-width: 42px;
         }
       }
     }
-
     .topic-block-content {
       padding: 15px 30px;
-
       .topic-title-large {
         font-weight: 500;
         font-size: 27px;
         color: #000000;
         padding-bottom: 10px;
         cursor: pointer;
-
         &:hover {
           color: $deep-cerulean;
         }
       }
-
       .topic-title-small {
         font-size: 20px;
         border-top: 1px solid #c0cad1;
@@ -68,65 +57,55 @@
         line-height: 30px;
         padding-bottom: 10px;
       }
-
       em {
         font-size: 18px;
         font-weight: 600;
-
         a.read-about {
           margin-left: 10px;
         }
       }
-
       p {
         font-size: 22px;
-
         a {
           color: $deep-cerulean;
         }
       }
-
       .excrept-content-lg {
         font-size: 18px;
       }
     }
   }
-
   .bg-none {
     background: transparent;
   }
-
   .topic-block-sm {
     height: 100%;
-
     .topic-block-thumbnail {
       >img {
         height: 260px;
         object-fit: cover;
       }
-
       a.read-about {
         bottom: 40px;
         cursor: pointer;
       }
     }
-
     .topic-block-content {
       padding: 15px;
-
       h2.topic-title {
         font-size: 22px;
         border-top: 1px solid #c0cad1;
         padding-top: 15px;
         line-height: 30px;
       }
-
       .excrept-content-lg {
         padding-top: 5px;
         display: none;
       }
-
       .excrept-content-sm {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
         padding-top: 5px;
         font-size: 17px;
         max-height: 200px;
@@ -134,31 +113,26 @@
       }
     }
   }
-
   .read-more-lg {
     p {
       font-size: 22px;
       line-height: 3px;
-
       a {
         color: $deep-cerulean;
         cursor: pointer;
       }
     }
   }
-
   .read-more-sm {
     p {
       font-size: 17px;
       line-height: 3px;
-
       a {
         color: $deep-cerulean;
         cursor: pointer;
       }
     }
   }
-
   /deep/ p {
     a {
       font-size: 17px;
@@ -166,7 +140,6 @@
     }
   }
 }
-
 .topic-block-lg {
   .topic-block-thumbnail {
     img {
@@ -174,12 +147,10 @@
       height: 100%;
       width: 100%;
     }
-
     .img-lg {
-      height: 430px !important;
+      // height: 430px !important;
     }
   }
-
   a {
     font-size: 18px;
     cursor: pointer;
@@ -193,12 +164,10 @@
         font-size: 16px;
       }
     }
-
     .topic-block-content {
       h2.topic-title {
         font-size: 20px;
       }
-
       em {
         font-size: 18px;
       }
