--- a/src/app/pages/home/components/featured-topics/featured-topics.component.html
+++ b/src/app/pages/home/components/featured-topics/featured-topics.component.html
@@ -16,7 +16,7 @@
             <dsod-topic [topic]="topic" [showImage]="true" [showHeader]="true" styleFor="content-sm" [showRating]=true></dsod-topic>
           </div>
         </div>
-        <div class="row">
+        <div class="row no-thumbnail">
           <div class="col-xl-6 col-lg-6 col-md-6" *ngFor="let topic of featuredTopics | slice:3:5">
             <dsod-topic [topic]="topic" [showImage]="false" [showHeader]="true" styleFor="content-sm" [showRating]=true></dsod-topic>
           </div>
