--- a/src/app/shared/components/topic/topic.component.html
+++ b/src/app/shared/components/topic/topic.component.html
@@ -13,7 +13,7 @@
         </ng-template>
       </a>
       <a role="button" class="read-about" (click)="navigateTo($event)">
-        <img *ngIf="topic.contentTypeName==='Articles' || topic.contentTypeName==='Interviews'" src="assets/images/article-icon.png"
+        <img *ngIf="topic.contentTypeName==='Articles'" src="assets/images/article-icon.png"
           alt="">
         <img *ngIf="topic.contentTypeName==='Videos'" src="assets/images/youtube-icon.png" alt="">
         <img *ngIf="topic.contentTypeName==='Podcasts'" src="assets/images/podcast-icon.png" alt="">
@@ -24,7 +24,7 @@
       <em *ngIf="topic.author">By&nbsp;{{topic.author.fullName}}
         <a role="button" class="read-about" *ngIf="styleFor==='content-sm'&& (!topic.featuredMedia || !showImage)"
           (click)="navigateTo(topic)">
-          <img *ngIf="topic.contentTypeName==='Articles' || topic.contentTypeName==='Interviews'" src="assets/images/article-icon.png"
+          <img *ngIf="topic.contentTypeName==='Articles'" src="assets/images/article-icon.png"
             alt="" (click)="navigateTo($event)">
           <img *ngIf="topic.contentTypeName==='Videos'" src="assets/images/youtube-icon.png" alt="" (click)="navigateTo($event)">
           <img *ngIf="topic.contentTypeName==='Podcasts'" src="assets/images/podcast-icon.png" alt="" (click)="navigateTo($event)">
