--- a/src/app/pages/home/components/podcast-items/podcast-items.component.html
+++ b/src/app/pages/home/components/podcast-items/podcast-items.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <li *ngFor="let podcast of podcasts | slice :indexStart:indexEnd; let i =index"><a [routerLink]="['./podcast',podcast.id]">
-      <div>{{i+indexStart+1}}.</div>{{podcast.title}}<span>36:19</span>
-    </a></li>
+  <li *ngFor="let podcast of podcasts | slice :indexStart:indexEnd; let i =index">
+    <a [routerLink]="['./podcast',podcast.id]">
+<div>{{i+indexStart+1}}.&nbsp;</div> {{podcast.title}}<span>36:19</span>
+    </a>
+  </li>
 </ul>
